@@ -1,3 +1,12 @@
+2011-08-15  Kirit Saelensminde  <kirit@felspar.com>
+ Connection errors now report the host and port they're trying to connect to.
+ The pop3 tests now allow the server to be configured, and it is more aggresive in keeping the mailbox empty.
+ The pop client includes some extra logging describing what it is doing.
+ Made a change to the TCP time out handling to support the version of gcc that Macs use.
+
+2011-07-30  Kirit Saelensminde  <kirit@felspar.com>
+ Made some changes to support Boost 1.46.0.
+
 2011-07-22  Kirit Saelensminde  <kirit@felspar.com>
  Fixed a bug that was causing occasional data packets to be lost when sending large blocks of data.
 
